mule-user-guide/v/3.9/oracle-ebs-122-connector.adoc
=  Oracle电子商务套件12.2连接器
:keywords: user guide, oracle, ebs, e-business suite, connector
：imagesdir：./_images

_Premium_

*Oracle E-Business Suite (EBS) 12.2*的Anypoint连接器使用*REST web services*提供实时连接来查询和更新Oracle EBS。连接器已*developed for the Oracle EBS v12.2.x*。有关Oracle EBS的更多信息，请访问 link:http://www.oracle.com/us/products/applications/ebusiness/overview/index.html[甲骨文的官员]。

[NOTE]
另外，还有一个为支持*SOAP web services and message queues*的Oracle EBS v12.1.x而构建的Oracle电子商务套件（EBS）连接器。

阅读本用户指南以了解如何使用连接器设置和配置基本流程。使用 link:/release-notes/oracle-ebs-122-connector-release-notes[连接器发行说明]跟踪每个版本的连接器的功能添加，兼容性，限制和API版本更新。查看https://www.anypoint.mulesoft.com/exchange/?search=oracle%20ebs%2012.2[demo应用程序]。

MuleSoft在 link:/mule-user-guide/v/3.9/anypoint-connectors#connector-categories[_Premium_]支持策略下维护此连接器。

=== 连接器体系结构

Oracle EBS提供不同的技术或产品来解决各种类型的集成。下面列出的是与企业应用程序集成最广泛的应用程序：

. 以数据为中心的集成。
. 使用集成SOA网关通过Web服务进行集成。

下图显示了MuleSoft Oracle EBS连接器的集成体系结构：

image:oec122-architecture.png[Oracle EBS 12.2  - 连接器体系结构]

[NOTE]
有关更多信息，请参阅 link:http://docs.oracle.com/cd/E26401_01/index.htm[Oracle电子商务套件文档Web库]。

== 先决条件

由于连接器与Oracle EBS耦合程度如何，本文假设您具有：

*  Oracle EBS的工作知识。
* 阅读有关Oracle EBS版本的Web服务和集成方案的相关文档。

[TIP]
此处使用的Oracle EBS术语和概念的定义和详细说明可以在Oracle安装的Oracle文档集中免费获得。

=== 硬件和软件要求

有关硬件和软件要求，请访问 link:/mule-user-guide/v/3.9/hardware-and-software-requirements[硬件和软件要求]页面。

要使用Oracle EBS连接器，您必须具备以下条件：

*  *Web service configuration in Oracle EBS*：配置Oracle EBS连接器需要在Oracle EBS中配置REST Web服务并通过Integration Repository进行公开。
*  *FND_WEB_SEC PL/SQL Service*：连接器需要Oracle EBS部署FND_WEB_SEC PL / SQL服务。
*  *REST Service Locator*：连接器要求Oracle EBS将REST Service Locator部署为REST服务。
*  *WADL names in lower case*：与已部署的PL / SQL相对应的WADL必须在*lower case*中具有其内部名称作为别名。例如，如果您希望部署以*HR_ABSENCE_TYPE_API*为内部名称的*PLSQL Interface : Absence Attendance Type*，则其服务别名应为*hr_absence_type_api*。
*  *Anypoint Studio*

=== 兼容性

[%header%autowidth.spread]
|===
| {软件{1}}版本
| *Mule Runtime*  | 3.7
| *Oracle EBS*  | 12.2.x
| *Java*  | 7
|===

[IMPORTANT]
此连接器*only*支持Oracle EBS版本*12.2.x*。如果您需要与版本*12.1.x*进行集成，请参阅https://www.anypoint.mulesoft.com/exchange/?search=Oracle%20E-Business%20Suite%20Connector&type=connector[Oracle电子商务套件（EBS ）连接器]。

== 安装此连接器

. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索连接器，然后单击安装。
. 按照提示安装连接器。

Studio有更新时，会在右下角显示一条消息，您可以单击该消息来安装更新。

== 使用连接器之前

=== 部署REST服务定位器

这是您需要完成的第一项任务，以便稍后公开您的PL / SQL服务以供连接器使用。以下步骤摘自Oracle开发人员指南教程 link:https://docs.oracle.com/cd/E26401_01/doc.122/e20927/T511473T634173.htm[使用Java API作为REST服务]：

. 以具有集成管理员角色的用户身份登录到Oracle电子商务套件。

* 从导航菜单中选择*Integrated SOA Gateway*职责和*Integration Repository*链接。

. 在Integration Repository选项卡中，单击搜索以访问主搜索页面。

. 点击*Show More Search Options*以显示更多搜索字段。

* 输入以下关键字搜索值作为搜索条件：

** 类别：接口子类型

** 类别值：*Java Bean Services*

. 点击*Go*执行搜索。

* 点击*REST Service Locator*界面名称链接以打开界面详细信息页面。

. 在REST Web服务选项卡中，输入以下信息：
+
image:oec122-deploy-rest-service-locator-1.png[Oracle EBS 12.2  -  REST服务定位器未部署]

* 服务别名：restServiceLocator

** 别名将显示为所选方法或操作的WADL和架构中的服务端点。

* 选择所需的服务操作

** 在Service Operations区域中，HTTP方法复选框已被预先选中。
+
[NOTE]
如果某个Java方法使用特定的HTTP方法进行了注释，则为该方法预选了相应的HTTP方法复选框。管理员可以在部署服务之前更改HTTP方法复选框选择。
在此示例中，*'getRestInterface'*服务操作已使用GET HTTP方法注释;因此，GET复选框会自动选中。

. 单击*Deploy*将服务部署到Oracle电子商务套件WebLogic环境。

    * Once the REST service has been successfully deployed, 'Deployed' appears in the REST Service Status field along with the *View WADL* link. Click the *View WADL* link to view the deployed service WADL description.
+
image:oec122-deploy-rest-service-locator-2.png[Oracle EBS 12.2  - 部署REST服务定位器]

=== 将PL / SQL API部署为REST服务（WADL）

以下步骤描述了将PL / SQL {{}}部署为REST服务的过程。同样的指南适用于任何PL / SQL。

. 以具有集成管理员角色的用户身份登录到Oracle电子商务套件。

* 从导航菜单中选择*Integrated SOA Gateway*职责和*Integration Repository*链接。

. 在Integration Repository选项卡中，单击搜索以访问主搜索页面。

. 点击*Show More Search Options*以显示更多搜索字段。

* 输入以下关键字搜索值作为搜索条件：

** 类别：接口子类型

** 类别值：PL / SQL

** 内部名称：FA_ADJUSTMENT_PUB
+
image:oec122-deploy-plsql-1.png[部署PL / SQL  - 搜索]

. 点击*Go*执行搜索。

** 点击调整API链接查看界面详细信息。
+
image:oec122-deploy-plsql-2.png[部署PL / SQL  - 调整API]

* 点击*REST Service Locator*界面名称链接以打开界面详细信息页面。

. 在REST Web服务选项卡中，输入以下信息：
+
image:oec122-deploy-plsql-3.png[部署PL / SQL  - 调整API配置]
+
重要提示：部署的Web服务*MUST*的别名应为：1）内部名称和2）以小写字母写入。别名信息可以在*Service Alias*标签下找到。在这个例子中，它是*fa_adjustment_pub*。

. 单击*Deploy*将服务部署到Oracle电子商务套件WebLogic环境。

    * Once the REST service has been successfully deployed, 'Deployed' appears in the REST Service Status field along with the *View WADL* link. Click the *View WADL* link to view the deployed service WADL description.
+
image:oec122-deploy-plsql-4.png[部署PL / SQL  - 调整API部署]


== 配置连接器全局元素

要在Mule应用程序中使用Oracle EBS 12.2连接器，请配置全局Oracle EBS 12.2元素，该应用程序中的所有Oracle EBS 12.2连接器均可使用该元素。
该连接器提供以下全局配置：

*  *Configuration*：用于Web服务和PL / SQL调用。

按照以下步骤为Web服务和PL / SQL调用创建Oracle EBS 12.2全局元素：

. 点击画布底部的*Global Elements*标签。
. 在Global Mule配置元素屏幕上，点击*Create*。
. 在*Choose Global Type wizard*中，展开*Connector Configuration*，然后选择*OracleEBS 12.2: Configuration*。

然后，填写以下参数：

[%header%autowidth.spread]
|===
| {字段{1}}说明
| *Host*  |输入Oracle EBS实例的主机。
| *Port*  |输入Oracle EBS Web服务的端口。
| *SSL enabled*  |如果选中，将尝试使用HTTPS而不是HTTP进行Web服务调用。
| *Username*  |用户名登录Oracle EBS Web服务。
| *Password*  |用户名的密码。
| *Rest Service Locator alias*  |部署时分配给内部名称为`oracle.apps.fnd.rep.ws.service.EbsRestLocator`的Web服务的名称。
| *FND Web Sec alias*  |部署时分配给内部名称为`FND_WEB_SEC`的PL / SQL Web服务的名称。
| *Responsibility name*  |输入执行操作所需的责任名称。
| *Responsibility application name*  |输入执行操作所需的应用程序短名称。
| *Security group name*  |输入Oracle EBS实例的安全组密钥（可选）。默认值是*STANDARD*。
| *NLS language*  |输入Oracle EBS实例的NLS语言（可选）。默认值是*AMERICAN*。
| *Org. ID*  |输入Oracle EBS实例的组织标识（可选）。
|===

image:oec122-global-element-props.png[Oracle EBS 12.2  - 配置]

== 使用连接器

Oracle EBS 12.2连接器是基于操作的连接器，支持部署在Oracle系统中的*invocation of any PL/SQL REST service*。

=== 连接器命名空间和架构

在Studio中设计应用程序时，将连接器从调色板拖放到Anypoint Studio画布上的操作应自动使用连接器*namespace*和*schema location*填充XML代码。

[TIP]
如果您是在Studio的XML编辑器或其他文本编辑器中手动编码Mule应用程序，请在`<mule>`标记内*Configuration XML*的标题中定义名称空间和模式位置。

[source, xml,linenums]
----
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xmlns:oracle-ebs122="http://www.mulesoft.org/schema/mule/oracle-ebs122"
      xsi:schemaLocation="
               http://www.mulesoft.org/schema/mule/core
               http://www.mulesoft.org/schema/mule/core/current/mule.xsd
               http://www.mulesoft.org/schema/mule/oracle-ebs122
               http://www.mulesoft.org/schema/mule/oracle-ebs122/current/mule-oracle-ebs122.xsd">

      <!-- put your global configuration elements and flows here -->

</mule>
----

=== 在Mavenized Mule应用程序中使用连接器

如果您正在编写Mavenized Mule应用程序，则此XML片段必须包含在您的`pom.xml`文件中。

[source,xml,linenums]
----
<dependency>
  <groupId>org.mule.modules</groupId>
  <artifactId>oracle-ebs-122-connector</artifactId>
  <version>1.0.0</version>
</dependency>
----

[TIP]
====
在`<version>`标签内，为最新版本提供所需的版本号，单词`RELEASE`，或者为最新版本提供`SNAPSHOT`。
====

使用连接器演示Mule应用程序== 

您可以使用来自 http://mulesoft.github.io/mule-oracle-ebs-12.2-connector[此链接]的Oracle EBS 12.2连接器下载功能完整的演示应用程序。

=== 示例用例

当前部分描述了4个与*HR Location*服务相关的常见使用案例。要创建将包含这些示例的Mule应用程序，请按照以下步骤操作：

. 在Anypoint Studio中创建一个新的*Mule Project*。
. 在`src/main/resources/mule-app.properties`中设置您的OracleEBS 12.2 *credentials*。
+
[source,code,linenums]
----
oracle122.username=
oracle122.password=
oracle122.host=
oracle122.port=
oracle122.responsibility=
oracle122.restServiceLocatorAlias=
oracle122.fndWebSecAlias=
oracle122.respApplication=
oracle122.securityGroup=
oracle122.nlsLanguage=
oracle122.orgId=
----
+
. 创建一个新的**OracleEBS 12.2**全局元素配置并使用placholders填充凭据：
+
[source,xml]
----
<oracle-ebs122:config name="OracleEBS_12_2__Configuration"
    host="${oracle122.host}"
    port="${oracle122.port}"
    username="${oracle122.username}"
    password="${oracle122.password}"
    restServiceLocatorAlias="${oracle122.restServiceLocatorAlias}"
    fndWebSecAlias="${oracle122.fndWebSecAlias}"
    responsibility="${oracle122.responsibility}"
    respApplication="${oracle122.respApplication}"
    securityGroup="${oracle122.securityGroup}"
    nlsLanguage="${oracle122.nlsLanguage}"
    orgId="${oracle122.orgId}"
    doc:name="OracleEBS 12.2: Configuration"/>
----
+
. 点击**Test Connection**确认Mule可以连接Oracle 12.2实例。如果连接成功，请单击**OK**保存配置。否则，请查看或更正任何无效参数并再次测试。
. 创建一个新的**HTTP Listener**全局元素配置，并将其保留为默认值。

==== 创建一个位置

. 将**HTTP endpoint**拖到画布上并配置以下参数：
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|连接器配置|  HTTP_Listener_Configuration
| {路径{1}} /创建
|===
+
. 将**OracleEBS12.2 Connector**组件拖放到HTTP端点旁边并在*Connector Configuration*字段中选择在上一节中创建的配置。
. 使用以下值配置处理器：
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|操作|调用PL / SQL REST服务
| {WADL {1}} hr_location_api
| {操作{1}} CREATE_LOCATION
|有效载荷参考| ＃[有效载荷]
|===
. 拖动一个**DataWeave**组件并设置以下输入参数：
+
[source,dataweave,linenums]
----
%dw 1.0
%output application/xml
%namespace ns0 http://xmlns.oracle.com/apps/per/rest/hr_location_api/create_location/
---
{
	ns0#InputParameters: {
		ns0#P_VALIDATE: 0,
		ns0#P_EFFECTIVE_DATE: now,
		ns0#P_LOCATION_CODE: "HR- MuleSoft BA",
		ns0#P_DESCRIPTION: "Buenos Aires Office"
	}
}
----
.  *Deploy*应用程序，打开Web浏览器并向URL *http://localhost:8081/create*发送请求。
. 如果位置已成功创建，您应该收到以下包含新位置的*ID and Version Number*的XML响应：
+
[source,xml,linenums]
----
<?xml version = '1.0' encoding = 'UTF-8'?>
<OutputParameters xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.oracle.com/apps/per/rest/hr_location_api/create_location/">
    <P_LOCATION_ID>27545</P_LOCATION_ID>
    <P_OBJECT_VERSION_NUMBER>1</P_OBJECT_VERSION_NUMBER>
</OutputParameters>
----

==== 获取位置

. 将**HTTP endpoint**拖到画布上并配置以下参数：
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|连接器配置|  HTTP_Listener_Configuration
| {路径{1}} / GET
|===
+
. 将**OracleEBS12.2 Connector**组件拖放到HTTP端点旁边并在*Connector Configuration*字段中选择在上一节中创建的配置。
. 使用以下值配置处理器：
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|操作|调用PL / SQL REST服务
| {WADL {1}} hr_location_record
| {操作{1}} GET_LOCATION_DETAILS
|有效载荷参考| ＃[有效载荷]
|===
. 拖动一个**DataWeave**组件并设置以下输入参数：
+
[source,dataweave,linenums]
----
%dw 1.0
%output application/xml
%namespace ns0 http://xmlns.oracle.com/apps/per/rest/hr_location_record/get_location_details/
---
{
	ns0#InputParameters: {
		ns0#P_QUERY_OPTIONS: {
			ns0#LOCATION_ID: "27545"
		}
	}
}
----
.  *Deploy*应用程序，打开Web浏览器并向URL *http://localhost:8081/get*发送请求。
. 如果该位置存在，您应该收到以下XML响应，其中包含位置的完整详细信息：
+
[source,xml,linenums]
----
<?xml version = '1.0' encoding = 'UTF-8'?>
<OutputParameters xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.oracle.com/apps/per/rest/hr_location_record/get_location_details/">
    <P_LOCATIONS>
        <P_LOCATIONS_ITEM>
            <LOCATION_ID>27545</LOCATION_ID>
            <LOCATION_CODE>HR- Mule BA</LOCATION_CODE>
            <LOCATION_USE>HR</LOCATION_USE>
            <BUSINESS_GROUP_ID xsi:nil="true"/>
            <DESCRIPTION>Buenos Aires Office</DESCRIPTION>
            <SHIP_TO_LOCATION_ID>27545</SHIP_TO_LOCATION_ID>
            ...
        </P_LOCATIONS_ITEM>
    </P_LOCATIONS>
</OutputParameters>
----

==== 更新位置

. 将**HTTP endpoint**拖到画布上并配置以下参数：
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|连接器配置|  HTTP_Listener_Configuration
| {路径{1}} /更新
|===
+
. 将**OracleEBS12.2 Connector**组件拖放到HTTP端点旁边并在*Connector Configuration*字段中选择在上一节中创建的配置。
. 使用以下值配置处理器：
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|操作|调用PL / SQL REST服务
| {WADL {1}} hr_location_api
| {操作{1}} UPDATE_LOCATION
|有效载荷参考| ＃[有效载荷]
|===
. 拖动一个**DataWeave**组件并设置以下输入参数：
+
[source,dataweave,linenums]
----
%dw 1.0
%output application/xml
%namespace ns0 http://xmlns.oracle.com/apps/per/rest/hr_location_api/update_location/
---
{
	ns0#InputParameters: {
		ns0#P_VALIDATE: 0,
		ns0#P_EFFECTIVE_DATE: now,
		ns0#P_LOCATION_ID: "27545",
		ns0#P_LOCATION_CODE: "HR- MuleSoft BA",
		ns0#P_DESCRIPTION: "Second MuleSoft's Buenos Aires Office",
		ns0#P_OBJECT_VERSION_NUMBER: 1
	}
}
----
.  *Deploy*应用程序，打开Web浏览器并向URL *http://localhost:8081/update*发送请求。
. 如果位置已成功更新，您应该会收到以下XML响应，其中包含该位置的新*Version Number*：
+
[source,xml,linenums]
----
<?xml version = '1.0' encoding = 'UTF-8'?>
<OutputParameters xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.oracle.com/apps/per/rest/hr_location_api/update_location/">
    <P_OBJECT_VERSION_NUMBER>2</P_OBJECT_VERSION_NUMBER>
</OutputParameters>
----

==== 删除一个位置

. 将**HTTP endpoint**拖到画布上并配置以下参数：
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|连接器配置|  HTTP_Listener_Configuration
| {路径{1}} /删除
|===
+
. 将**OracleEBS12.2 Connector**组件拖放到HTTP端点旁边并在*Connector Configuration*字段中选择在上一节中创建的配置。
. 使用以下值配置处理器：
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|操作|调用PL / SQL REST服务
| {WADL {1}} hr_location_api
| {操作{1}} DELETE_LOCATION
|有效载荷参考| ＃[有效载荷]
|===
. 拖动一个**DataWeave**组件并设置以下输入参数：
+
[source,dataweave,linenums]
----
%dw 1.0
%output application/xml
%namespace ns0 http://xmlns.oracle.com/apps/per/rest/hr_location_api/delete_location/
---
{
	ns0#InputParameters: {
		ns0#P_VALIDATE: 0,
		ns0#P_LOCATION_ID: "27545",
		ns0#P_OBJECT_VERSION_NUMBER: 2
	}
}
----
.  *Deploy*应用程序，打开Web浏览器并向URL *http://localhost:8081/delete*发送请求。
. 如果位置被成功删除，您应该收到一个空的回复。


=== 示例用例 -  XML

将其粘贴到Anypoint Studio中以与本指南中讨论的示例用例应用程序进行交互。

[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:oracle-ebs122="http://www.mulesoft.org/schema/mule/oracle-ebs122" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:spring="http://www.springframework.org/schema/beans"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/oracle-ebs122 http://www.mulesoft.org/schema/mule/oracle-ebs122/current/mule-oracle-ebs122.xsd
http://www.mulesoft.org/schema/mule/ee/dw http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">
    <oracle-ebs122:config name="OracleEBS_12_2__Configuration" host="${oracle122.host}" port="${oracle122.port}" username="${oracle122.username}" password="${oracle122.password}" restServiceLocatorAlias="${oracle122.restServiceLocatorAlias}" fndWebSecAlias="${oracle122.fndWebSecAlias}" responsibility="${oracle122.responsibility}" respApplication="${oracle122.respApplication}" securityGroup="${oracle122.securityGroup}" nlsLanguage="${oracle122.nlsLanguage}" orgId="${oracle122.orgId}" doc:name="OracleEBS 12.2: Configuration"/>
    <http:listener-config name="HTTP_Listener_Configuration" host="0.0.0.0" port="8081" doc:name="HTTP Listener Configuration"/>

    <flow name="Create_HR_Location_Flow">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/create" doc:name="HTTP"/>
        <dw:transform-message doc:name="Input params">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/xml
%namespace ns0 http://xmlns.oracle.com/apps/per/rest/hr_location_api/create_location/
---
{
	ns0#InputParameters: {
		ns0#P_VALIDATE: 0,
		ns0#P_EFFECTIVE_DATE: now,
		ns0#P_LOCATION_CODE: "HR- Mule BA",
		ns0#P_DESCRIPTION: "Buenos Aires Office"
	}
}]]></dw:set-payload>
        </dw:transform-message>
        <oracle-ebs122:invoke-pl-sql-rest-service config-ref="OracleEBS_12_2__Configuration" wadlOperation="hr_location_api||CREATE_LOCATION" doc:name="Create Location"/>
    </flow>
    <flow name="Get_HR_Location_Flow">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/get" doc:name="HTTP"/>
        <dw:transform-message doc:name="Input params">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/xml
%namespace ns0 http://xmlns.oracle.com/apps/per/rest/hr_location_record/get_location_details/
---
{
	ns0#InputParameters: {
		ns0#P_QUERY_OPTIONS: {
			ns0#LOCATION_ID: "27545"
		}
	}
}]]></dw:set-payload>
        </dw:transform-message>
        <oracle-ebs122:invoke-pl-sql-rest-service config-ref="OracleEBS_12_2__Configuration" wadlOperation="hr_location_record||GET_LOCATION_DETAILS" doc:name="Get Location"/>
    </flow>
    <flow name="Update_HR_Location_Flow">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/update" doc:name="HTTP"/>
        <dw:transform-message doc:name="Input params">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/xml
%namespace ns0 http://xmlns.oracle.com/apps/per/rest/hr_location_api/update_location/
---
{
	ns0#InputParameters: {
		ns0#P_VALIDATE: 0,
		ns0#P_EFFECTIVE_DATE: now,
		ns0#P_LOCATION_ID: "27545",
		ns0#P_LOCATION_CODE: "HR- MuleSoft BA",
		ns0#P_DESCRIPTION: "Second MuleSoft's Buenos Aires Office",
		ns0#P_OBJECT_VERSION_NUMBER: 1
	}
}]]></dw:set-payload>
        </dw:transform-message>
        <oracle-ebs122:invoke-pl-sql-rest-service config-ref="OracleEBS_12_2__Configuration" wadlOperation="hr_location_api||UPDATE_LOCATION" doc:name="Update Location"/>
    </flow>
    <flow name="Delete_HR_Location_Flow">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/delete" doc:name="HTTP"/>
        <dw:transform-message doc:name="Input params">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/xml
%namespace ns0 http://xmlns.oracle.com/apps/per/rest/hr_location_api/delete_location/
---
{
	ns0#InputParameters: {
		ns0#P_VALIDATE: 0,
		ns0#P_LOCATION_ID: "27545",
		ns0#P_OBJECT_VERSION_NUMBER: 2
	}
}]]></dw:set-payload>
        </dw:transform-message>
        <oracle-ebs122:invoke-pl-sql-rest-service config-ref="OracleEBS_12_2__Configuration" wadlOperation="hr_location_api||DELETE_LOCATION" doc:name="Delete Location"/>
    </flow>
</mule>
----

== 资源

* 访问 link:/release-notes/oracle-ebs-122-connector-release-notes[Oracle电子商务套件12.2连接器发行说明]。
* 请参阅Oracle的博客文章 link:https://blogs.oracle.com/stevenChan/entry/introducing_oracle_e_business_suite[Oracle电子商务套件REST服务入门]。
